<resources>
    <string name="app_name">MTodo</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_todo">New Todo</string>

    <string name="todo_title">Dummy Title</string>
    <string name="todo_description">Dummy Description</string>
    <string name="todo_priority_icon">Priority Icon</string>
    <string name="todo_priority">1</string>
    <string name="todo_done_button">DONE</string>

    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>

    <string name="priority_promt">Select a priority</string>
    <string-array name="priority_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
